--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:file:./db/filmorate;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+#spring.datasource.url=jdbc:h2:mem:./db/filmorate;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
